--- a/src/resources/Welcome.html
+++ b/src/resources/Welcome.html
@@ -2,30 +2,24 @@
     <body>
     <center>
         <h1>Welcome to Pyrite!</h1>
-        <h2>The #1 Volumetric Circuit Editor</h2>
-        <h3><em>by Anderson Antunes - anderson.utf@gmail.com</em></h3>
-        <h2><font color=red>Warning! This is an pre-release build, <em>lots of bugs ahead</em></font></h2>
+        <h2>The first Volumetric Circuit Editor</h2>
+        <h3><em>by Anderson Antunes - https://github.com/anderson-</em></h3>
+        <h2><font color=red>Warning! This is a pre-alpha build, <em>lots of bugs ahead</em></font></h2>
     </center>
     <h3>&emsp;2D Schematic editor shortcuts</h3>
-    <p>&emsp;&emsp;[;] - add sub-circuit (rigth click-edit for choosing the circuit)
+    <p>&emsp;&emsp;[;] - add sub-circuit (rigth click>edit for choosing the circuit)
     <p>&emsp;&emsp;[+] - add input
     <p>&emsp;&emsp;[-] - add output
     <h3>&emsp;3D schematic editor shortcuts</h3>
+    <p>&emsp;&emsp;[MOUSE1] - enter panel / select object
+    <p>&emsp;&emsp;[ESC] - leave panel
     <p>&emsp;&emsp;[W][A][S][D] or [ARROWS] - move
     <p>&emsp;&emsp;[SPACE] or [PAGE UP] - move up
     <p>&emsp;&emsp;[SHIFT] or [PAGE DOWN] - move down
-    <p>&emsp;&emsp;[1]~[5] - change grid type
-    <p>&emsp;&emsp;[r] - place source and ground in positions {4, 2, 2} and {2, 2, 2}, respectively
-    <p>&emsp;&emsp;[ENTER] - start auto fitting
-    <p>&emsp;&emsp;[h] - start breadcrumb placer
-    <p>&emsp;&emsp;[b] - set background color
-    <p>&emsp;&emsp;[I][J][K][L] - move selected components
-    <p>&emsp;&emsp;[c] - clear selection
-    <p>&emsp;&emsp;[CTRL] + [Z] - undo
-    <p>&emsp;&emsp;[CTRL] + [R] - redo
+    <p>&emsp;* Use the floating window to interact with the circuit
     <p>
     <center>
-        <h2>Project page: http://hackaday.io/project/2396</h2>
+        <h2>Project page: https://hackaday.io/project/2396</h2>
         <h2>GitHub: https://github.com/anderson-/Pyrite</h2>
     </center>
 </body>
